2011-05-31  Robert Larice
 * tests/bsim3soifd/RampVg2.out ,
 * tests/bsim3soifd/inv2.out ,
 * tests/bsim3soifd/t3.out ,
 * tests/bsim3soifd/t4.out ,
 * tests/bsim3soifd/t5.out ,
 * tests/filters/lowpass.out ,
 * tests/general/mosmem.out ,
 * tests/mesa/mesa11.out ,
 * tests/polezero/filt_bridge_t.out :
   massage some tests/* reference files

2011-05-31  Robert Larice
 * src/Makefile.am ,
 * tests/Makefile.am ,
 * tests/hisim/Makefile.am ,
 * tests/hisimhv/Makefile.am :
   updates for `make dist'

2011-05-30  Robert Larice
 * tests/bin/check_cmc.sh :
   incorporate CMC test suite into make target 'check'

2011-05-30  Robert Larice
 * configure.ac ,
 * tests/bin/modelQaTestRoutines.pm ,
 * tests/bin/ngspice.pm ,
 * tests/bin/runQaTests.pl ,
 * tests/bin/run_cmc_check ,
 * tests/hisim/Makefile.am ,
 * tests/hisimhv/.cvsignore ,
 * tests/hisimhv/Makefile.am :
   incorporate CMC test suite into make target 'check'

2011-05-29  Holger Vogt
 * winmain.c, winmain.h: prototypes and forwards

2011-05-29  Robert Larice
 * Removed   tests/hisimhv/nmos/Makefile ,
 * Removed   tests/hisimhv/pmos/Makefile ,
 * Removed   tests/hisim/nmos/Makefile ,
 * Removed   tests/hisim/pmos/Makefile ,
 * Added     tests/bin/run_cmc_check ,
 * Modified  tests/hisimhv/nmos/run ,
 * Modified  tests/hisimhv/pmos/run ,
 * Modified  tests/hisim/nmos/run ,
 * Modified  tests/hisim/pmos/run :
   CMC test suite, cleanup
     use /bin/sh instead of /bin/csh
     replace the makefiles with a single script

2011-05-29  Holger Vogt
 * main.c, inpcom.c, numparam.h, spicenum.c, xpressn.c, compatmode.h, b3v1.c:
   compatibility issues

2011-05-28  Dietmar Warning
 * tests/hisim, tests/hisimhv: include the CMC test suite (Author: Colin McAndrew)
   provided by the model developer - Hiroshima University

2011-05-28  Holger Vogt
 * configure.ac, visualc/config.h, CPOYING, FAQ, INSTALL, NEWS:
   update to prepare release 23

2011-05-28  Robert Larice
 * src/ngsconvert.c :