@@ -10,13 +10,18 @@
 executable="$1"
 qaspec="$2"
 subdir="$(dirname $2)"
+kind="$(basename $subdir)"
 
 echo "qaspec = $qaspec"
 echo "subdir = $subdir"
 echo "executable = $executable"
+echo "kind = $kind"
+
+mkdir -p "$kind"
 
 exec "$(dirname $0)/run_cmc_check" \
     --executable="${executable}" \
     --srcdir="${subdir}/" \
+    --results "$kind/results" \
     -qa "${qaspec}" \
     ngspice
